<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button_area_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/button_render_area"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_area_upper" />

    <View
        android:id="@+id/button_area_delim"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_area_upper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/touch_area_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <View
        android:id="@+id/touch_area"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/touch_area_upper"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/touch_area_upper"
        tools:text="TextView" />

    <TextView
        android:id="@+id/text_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_control" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expand_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="500"
        app:el_expanded="true"
        app:el_parallax="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#222222"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/button_coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/coin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/card"
                app:layout_constraintStart_toEndOf="@+id/button_coin"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/check_enable_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Enable Air"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/button_card"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="#7f7f7f"
                app:layout_constraintEnd_toStartOf="@+id/button_start"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/check_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/show_debug_info"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_coin" />

            <TextView
                android:id="@+id/button_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/highlight_border_1dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/test"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/check_debug"
                app:layout_constraintTop_toTopOf="@+id/check_debug" />

            <TextView
                android:id="@+id/button_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/highlight_border_1dp"
                android:text="@string/service"
                android:textColor="@color/white"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintStart_toEndOf="@id/button_test"
                app:layout_constraintTop_toTopOf="@id/button_test" />

            <CheckBox
                android:id="@+id/check_show_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/show_delay"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/button_service"
                app:layout_constraintTop_toTopOf="@+id/button_service" />

            <CheckBox
                android:id="@+id/check_vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/enable_vibration"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/check_show_delay"
                app:layout_constraintTop_toTopOf="@+id/check_show_delay" />

            <CheckBox
                android:id="@+id/check_simple_air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/simple_air"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/check_vibrate"
                app:layout_constraintTop_toTopOf="@+id/check_vibrate" />

            <TextView
                android:id="@+id/text_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="#444444"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="UDP"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/check_simple_air"
                app:layout_constraintStart_toEndOf="@+id/check_simple_air"
                app:layout_constraintTop_toTopOf="@+id/check_simple_air" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </net.cachapa.expandablelayout.ExpandableLayout>

    <TextView
        android:id="@+id/text_expand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_gray_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/collapse"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_control" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/black"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expand_control" />

</androidx.constraintlayout.widget.ConstraintLayout>